Have the video fade to black after completion. Possibly not ideal but prevents bleeding click-through. Fixes #29.

--- a/css/khan.css
+++ b/css/khan.css
@@ -76,12 +76,21 @@ video, .overlay {
 	background-color: #000;
 	padding: 0;
 	margin: 0;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
+video {
+	-webkit-transition: opacity 2.0s ease-in;
+	z-index: 20;
 }
 
 .overlay {
 	color: #ddd;
 	text-shadow: none;
 	display: table; /* Vertically center the h2 */
+	z-index: 30;
 }
 
 .overlay .details {
@@ -107,6 +116,11 @@ video, .overlay {
 
 .overlay.replay {
 	background: rgba(0, 0, 0, 0.3);
+}
+
+.overlay.underlay {
+	z-index: 10;
+	background: #000
 	position: absolute;
 	top: 0px;
 	left: 0px;
